@@ -1,3 +1,7 @@
+2007-01-02 Jordi Mas i Hernàndez <jordimash@gmail.com>
+
+	* libplanner/mrp-task-manager.c: fixes bug # 372694
+
 2006-12-27 Jordi Mas i Hernàndez <jordimash@gmail.com>
 
 	*  planner-html-plugin.c: fixes bug #388454. We were freeing a 
